--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -62,24 +62,24 @@ body {margin:0;}
 </div>
 <div class="nav1">
     <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Contact</a>
-    <a href="{% url 'loginpage' %}">Login</a>
+    <a href="#">Dashboard</a>
+    <a href="#">Product Management</a>
+    <a href="#">Sales Management</a>
+    <a href="#">Change Password</a>
+    <a href="#">Logout</a>
+    
 </div>
 
 <div class="main">
     <br>
-    <img src="static/images/supermarket.jpg" width="550" height="600" style="float:right;margin-top:-6em;" >
-    <p>
-  <h1 style="font-size: 20px;">About Super Market Management System</h1>
+    
+   
+  <h1 style="font-size: 20px;">Super Market Management System Dashboard</h1>
   <hr style="color:black;width:600px;margin-left: 1px; ">
-  <p style="font-size:16px;width:48%;">
-      Super Market Management System is an online system wherein the Owner of the supermarket logs in as Administrator and can manage all the transactions made in the supermarket. He has the right to add products along with their price.
-      He can also edit and delete existing products in the supermarket. He also registers new customers in the supermarket with their personal details and quantity of all the products they purchase. The products added to the cart sum up to 
-      the price the customer needs to pay and his bill is generated in the form of a PDF. Thus, all the transactions made in the supermarket are stored in the database and automatically the bill is generated for the customer with the amount he needs to pay.
+  <p style="font-size:16px;width:48%;">Poetry uses forms and conventions to suggest differential interpretations of words, or to evoke emotive responses. Devices such as assonance, alliteration, onomatopoeia, and rhythm may convey musical or incantatory effects. The use of ambiguity, symbolism, irony, and other stylistic elements of poetic diction often leaves a poem open to multiple interpretations. Similarly, figures of speech such as metaphor, simile, and metonymy[5] establish a resonance between otherwise disparate images—a layering of meanings, forming connections previously not perceived. Kindred forms of resonance may exist, between individual verses, in their patterns of rhyme or rhythm.
+
    </p>
   
-</p>
 
   
   </div>
@@ -88,3 +88,24 @@ body {margin:0;}
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
