product with all functionalitites

--- a/templates/editproduct.html
+++ b/templates/editproduct.html
@@ -89,12 +89,10 @@ input[type=text]:focus, input[type=password]:focus, input[type=number]:focus {
   
 </div>
 <div class="nav1">
-    <a href="{% url 'frontpage' %}">Dashboard</a>
-    <a href="#">Product Management</a>
-    <a href="#">Sales Management</a>
-    <a href="#">Change Password</a>
-    <a href="{% url 'logoutpage' %}">Logout</a>
-    
+    <a href="{% url 'home' %}">Home</a>
+    <a href="#">About</a>
+    <a href="#">Contact</a>
+    <a href="{% url 'loginpage' %}">Login</a>
 </div>
 
 <div class="main">
@@ -106,7 +104,7 @@ input[type=text]:focus, input[type=password]:focus, input[type=number]:focus {
       
       <div style="text-align: center;">
 
-  <h1 style="font-size: 20px;">Add Product Records</h1>
+  <h1 style="font-size: 20px;">Edit Product</h1>
   
   <hr style="color:black;width:400px; text-align:center ">
   <br>
@@ -152,6 +150,3 @@ input[type=text]:focus, input[type=password]:focus, input[type=number]:focus {
 </body>
 </html>
 
-
-        
-       
