--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -94,9 +94,9 @@ body {margin:0;}
   <br>
   <a href="{% url 'addproduct' %}" class="boxprop">Add Product</a>
   <br><br>
-  <a href="{% url 'viewproduct' %}" class="boxprop">Product Details</a>
+  <a href="{% url 'viewproduct' %}" class="boxprop">Product Records</a>
   <br><br>
-  <a href="#" class="boxprop">Product Sales Details</a>
+  <a href="#" class="boxprop">Add Customer</a>
   <br><br>
   <a href="#" class="boxprop">This is a link</a>
   
