--- a/templates/viewproduct.html
+++ b/templates/viewproduct.html
@@ -3,6 +3,8 @@
 <head>
     <title>Home</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  
 <style>
 body {margin:0;}
 input[type=text], input[type=password] {
@@ -47,7 +49,7 @@ input[type=text]:focus, input[type=password]:focus, input[type=number]:focus {
   display: block;
   color: #f2f2f2;
   text-align: center;
-  padding: 25px 16px;
+  padding: 20px 16px;
   text-decoration: none;
   font-size: 28px;
   margin-left: 35px;
@@ -66,7 +68,7 @@ input[type=text]:focus, input[type=password]:focus, input[type=number]:focus {
     display: block;
     color: #f2f2f2;
     text-align: center;
-    padding: 12px 16px;
+    padding: 9.5px 16px;
     text-decoration: none;
     font-size: 20px;
     margin-left: 35px;
@@ -96,14 +98,16 @@ table {
 <body>
 
 <div class="navbar">
-  <a href="{% url 'home' %}">Super Market Management System</a>
+  <a href="{% url 'home' %}" style="font-family: times;">Super Market Management System</a>
   
 </div>
-<div class="nav1">
-    <a href="{% url 'home' %}">Home</a>
-    <a href="#">About</a>
-    <a href="#">Contact</a>
-    <a href="{% url 'loginpage' %}">Login</a>
+<div class="nav1" style="font-family: times;">
+    <a href="{% url 'frontpage' %}">Dashboard</a>
+    <a href="#">Product Management</a>
+    <a href="#">Sales Management</a>
+    <a href="#">Change Password</a>
+    <a href="{% url 'logoutpage' %}">Logout</a>
+    
 </div>
 
 <div class="main">
@@ -115,25 +119,30 @@ table {
       
       <div style="text-align: center;">
 
-  <h1 style="font-size: 23px;">Product Records</h1>
+  <h1 style="font-size: 22px;font-family:times;"><b>Product Records</b></h1>
+  <hr style="color:black;width:600px; text-align:center ">
+  
   <table style="width:700px;margin-left:auto;margin-right:auto">
-  <tr style="background-color:rgb(10, 31, 128);color:white;">
+  <tr style="background-color: rgb(12, 4, 87);color:white;">
     <th style="text-align: center;">Sr.No</th>
     <th style="text-align: center;">Name</th>
     <th style="text-align: center;">Company</th>
     <th style="text-align: center;">Type</th>
     <th style="text-align: center;">Cost</th>
+    <th style="text-align: center;">Action</th>
   </tr>
+  
   {% for product in products %} 
 
-  
-                <tr style="color: black;font-size:16px;font-family:times">
-                    <th style="text-align: center;">{{ product.id }}</th>
+                <tr style="color: black;font-size:16px;font-family:times;height:5px;">
+                    <th style="text-align: center;">{{ forloop.counter }}</th>
                     <th>{{ product.name }}</th>
                     <th>{{ product.company }}</th>
                     <th>{{ product.protype }}</th>
                     <th>{{ product.cost }}</th>
+                    <th style="text-align: center;"><a href="{% url 'editproduct' product.pk %}" class="btn btn-warning" type="button">Edit</a>  <a href="{% url 'deleteproduct' product.pk %}" class="btn btn-danger">Delete</a></th>
                 </tr>
+                
                 {% endfor %}
   
    
