--- a/templates/editproduct.html
+++ b/templates/editproduct.html
@@ -89,10 +89,9 @@ input[type=text]:focus, input[type=password]:focus, input[type=number]:focus {
   
 </div>
 <div class="nav1">
-    <a href="{% url 'home' %}">Home</a>
-    <a href="#">About</a>
-    <a href="#">Contact</a>
-    <a href="{% url 'loginpage' %}">Login</a>
+  <a href="{% url 'frontpage' %}">Dashboard</a>
+    
+  <a href="{% url 'logoutpage' %}">Logout</a>
 </div>
 
 <div class="main">
