--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -77,9 +77,7 @@ body {margin:0;}
 </div>
 <div class="nav1">
     <a href="{% url 'frontpage' %}">Dashboard</a>
-    <a href="#">Product Management</a>
-    <a href="#">Sales Management</a>
-    <a href="#">Change Password</a>
+    
     <a href="{% url 'logoutpage' %}">Logout</a>
     
 </div>
@@ -98,7 +96,7 @@ body {margin:0;}
   <br><br>
   <a href="{% url 'addcustomer' %}" class="boxprop">Add Customer</a>
   <br><br>
-  <a href="#" class="boxprop">This is a link</a>
+  <a href="{% url 'viewcustomer' %}" class="boxprop">View All Customers</a>
   
   </div>
 
